--- a/example/component/component-4_components.html
+++ b/example/component/component-4_components.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <script src="../assets/js/vue.min.js"></script>
+    <script src="../../assets/js/vue.min.js"></script>
     <title>component-4</title>
 </head>
 
